--- a/app/src/main/res/layout/activity_admin_drawer_base.xml
+++ b/app/src/main/res/layout/activity_admin_drawer_base.xml
@@ -2,29 +2,29 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/drawerLayout_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".users.DrawerBaseActivity"
+    tools:context=".admin.AdminDrawerBaseActivity"
     tools:openDrawer="start"
     android:fitsSystemWindows="true">
 
-    <include layout="@layout/content_layout"
+    <include layout="@layout/admin_content_layout"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/nav_view_admin"
         android:background="#e4e4e4"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/main_drawer_header"
+        app:headerLayout="@layout/admin_main_drawer_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/main_drawer_menu">
+        app:menu="@menu/admin_main_drawer_menu">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnLogout"
