--- a/app/src/main/res/layout/activity_admin_reservations.xml
+++ b/app/src/main/res/layout/activity_admin_reservations.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e4e4e4"
-    tools:context=".users.ReservationsActivity">
+    android:background="@color/bg_white"
+    tools:context=".admin.AdminReservationsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,6 +14,44 @@
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="60dp"
+                android:layout_weight="1"
+                android:backgroundTint="#161f48"
+                android:textAlignment="center"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="16dp"
+                android:text="Upcoming"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_weight="1"
+                android:backgroundTint="#d8e1e8"
+                android:text="History"
+                android:textSize="16dp"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginLeft="-20dp"
+                android:onClick="History"/>
+
+
+        </LinearLayout>
 
 
         <LinearLayout
@@ -28,7 +66,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="Your Reservations"
+                android:text="Upcoming Reservations"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="italic" />
@@ -53,14 +91,14 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="10dp"
                         android:fontFamily="sans-serif-medium"
-                        android:text="Reference Number: LRCDR-00001"
+                        android:text="Reference Number: LRCDR-00002"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </androidx.cardview.widget.CardView>
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="40dp"
+                    android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="-1dp"
                     android:layout_marginTop="15dp"
@@ -69,8 +107,9 @@
                     android:scaleType="centerCrop"
                     app:srcCompat="@drawable/arrow"
                     app:tint="@color/white"
-                    android:onClick="reservations"/>
+                    android:onClick="R1"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
