--- a/app/src/main/res/layout/activity_reserve.xml
+++ b/app/src/main/res/layout/activity_reserve.xml
@@ -49,20 +49,8 @@
                 android:fontFamily="sans-serif-medium"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="15dp"
-                android:text="Select Date"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="15dp"
-                android:text="Select Time"
+                android:layout_marginBottom="5dp"
+                android:text="Date"
                 android:textSize="20dp" />
 
         </LinearLayout>
@@ -73,46 +61,68 @@
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button4"
+                android:id="@+id/btnDate"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="2"
                 android:backgroundTint="@color/blue"
-                android:text="Tue, October 26"
-                app:cornerRadius="8dp" />
+                android:text="Select Date"
+                android:textSize="15sp"
+                app:cornerRadius="8dp"
+                android:onClick="btnDate"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:text="Select Time"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button5"
+                android:id="@+id/btnTimeStart"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginStart="13dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:backgroundTint="#161f48"
-                android:text="1:00pm"
-                app:cornerRadius="8dp"/>
+                android:text="Start Time"
+                android:textSize="15sp"
+                app:cornerRadius="8dp"
+                android:onClick="btnTimeStart"/>
 
             <TextView
                 android:id="@+id/textView11"
-                android:layout_width="18dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:layout_gravity="center"
+                android:layout_gravity="center_vertical"
                 android:text="-"
                 android:textStyle="bold" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button6"
+                android:id="@+id/btnTimeEnd"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:backgroundTint="#161f48"
-                android:text="5:00pm"
-                app:cornerRadius="8dp"/>
+                android:text="End Time"
+                android:textSize="15sp"
+                app:cornerRadius="8dp"
+                android:onClick="btnTimeEnd"/>
         </LinearLayout>
 
         <LinearLayout
@@ -184,9 +194,9 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_reserve_next"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="120dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="150dp"
+            android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/gold"
             android:text="Next"
             android:textSize="17dp"
