--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="gold">#927d52</color>
     <color name="blue">#161f48</color>
     <color name="bg_white">#e4e4e4</color>
+
+    <color name="pending">#FFA500</color> <!-- Orange -->
+    <color name="confirm">#008000</color> <!-- Green -->
+    <color name="cancel">#800000</color> <!-- Maroon -->
+    <color name="no_show">#808080</color> <!-- Grey -->
 </resources>
