--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,8 @@
     <style name="MyToolbarStyle" parent="Widget.AppCompat.Toolbar">
         <item name="contentInsetStartWithNavigation">-100dp</item>
     </style>
+
+    <style name="MySpinnerItemStyle" parent="@android:style/Widget.TextView.SpinnerItem">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
